attached_assets/Pasted--rest-express-1-0-0-dev-cross-env-NODE-ENV-development-_1769577958090.txt
 rest-express@1.0.0 dev
> cross-env NODE_ENV=development tsx --watch server/index.ts

[dotenv@17.2.3] injecting env (4) from .env -- tip: ðŸ” prevent committing .env to code: https://dotenvx.com/precommit
âœ… Mock Email Provider initialized (noreply@cybaemtech.com)
âœ… Email Queue (JSON version) initialized
5:25:39 AM [express] serving on port 5000
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/purchase-orders.tsx: SyntaxError: Identifier 'useState' has already been declared. (11:9)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
    at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:72:21)
    at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:818:16)
    at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:813:12)
    at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:713:12)
    at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3223:10)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3480:17)
    at parseImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4359:20)
    at parseNamedImportSpecifiers (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3441:36)
    at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3173:37)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3142:17)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3011:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:642:25)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3185:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:477:17)
    at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:414:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1438:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1412:10)
    at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
    at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:93:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4309:20)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:92:38)
    at TransformPluginContext.handler (/home/runner/workspace/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs:74:23)
    at EnvironmentPluginContainer.transform (/home/runner/workspace/node_modules/vite/dist/node/chunks/config.js:28790:51)
    at loadAndTransform (/home/runner/workspace/node_modules/vite/dist/node/chunks/config.js:22660:48) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'VarRedeclaration',
  loc: Position { line: 11, column: 9, index: 305 },
  pos: 305,
  syntaxPlugin: undefined
}
5:25:43 AM [vite] (client) Pre-transform error: /home/runner/workspace/client/src/pages/purchase-orders.tsx: Identifier 'useState' has already been declared. (11:9)

   9 |   ResizablePanelGroup,
  10 | } from "@/components/ui/resizable";
> 11 | import { useState, useEffect, useRef } from "react";
     |          ^
  12 | import { useLocation } from "wouter";
  13 | import html2canvas from "html2canvas";
  14 | import jsPDF from "jspdf";
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/purchase-orders.tsx:11:9
  9  |    ResizablePanelGroup,
  10 |  } from "@/components/ui/resizable";
  11 |  import { useState, useEffect, useRef } from "react";
     |           ^
  12 |  import { useLocation } from "wouter";
  13 |  import html2canvas from "html2canvas";
Failed running 'server/index.ts'
